--- a/src/index.pug
+++ b/src/index.pug
@@ -8,8 +8,24 @@ html(lang='en')
         link(rel='stylesheet' href='style.css')
         title Matrices
     body
-        header Testing
-        nav Nav test
-        .tabs
-            main Active page
-        footer Footer test
+        header
+            img(src='images/title.png' alt='Matrix icon' width='100' height='100')
+            h1 Matrix Math
+    .tabs
+        div: nav
+            input#nav-toggle(type='checkbox')
+            label(for='nav-toggle')
+                span(hidden) Menu &emsp14;
+                img(src='images/icon-dropdown.svg' alt='Expand menu toggle icon desktop' height='50')
+            ul#dropdown
+                li: a(href='#home') Introduction
+                li: a(href='#tab2') Determinant Calculation
+                li: a(href='#tab3')
+        - if(!lorem_ipsum) lorem_ipsum = null
+        - lorem = () => lorem_ipsum({count: 5, units: 'paragraphs', format: 'html'});
+        section#tab1  !{lorem()}
+        section#tab2 !{lorem()}
+        main#home !{lorem()}
+    footer
+            <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/three-dots" title="three dots icons">Three dots icons created by alfanz - Flaticon</a>
