--- a/src/style.scss
+++ b/src/style.scss
@@ -15,6 +15,9 @@ html {
     margin: 0;
   }
 }
+body, header, footer, .tabs {
+  overflow: auto; // stop margin escape on small screens
+}
 body {
   min-height: 100%;
   background: $page-color;
@@ -61,7 +64,19 @@ footer {
   background-color: $footer-color;
   text-align: center;
   a {
-    white-space: nowrap;
+    text-decoration: none;
+  }
+  @media (max-width: 80ch) { // about how many characters are in the link strings
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+    a {
+      display: block;
+
+      &:not(:last-child) {
+        border-bottom: $generic-border;
+      }
+    }
   }
 }
 
