--- a/src/style.scss
+++ b/src/style.scss
@@ -20,14 +20,9 @@ body, header, footer, .tabs {
 }
 body {
   min-height: 100%;
-  background: $page-color;
+  background: $bg-color;
   display: flex;
   flex-direction: column;
-  @include breakpoint(desktop) {
-    background: linear-gradient(to right, $bg-color, transparent 25%),
-                linear-gradient(to left, $bg-color, transparent 25%),
-                $page-color;
-    }
 }
 header {
   background-color: $header-color;
@@ -48,17 +43,37 @@ header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-areas: "left main right";
-  main, section {
-    display: none;
-    @include breakpoint(desktop) {
-      max-width: calc($mobile-width - 10em);
+}
+main, section {
+  display: none;
+  background-color: $page-color;
+  position: relative;
+  @include breakpoint(desktop) {
+    max-width: min($mobile-width, 100vw - 20em);
+    &::before, &::after {
+      content: "";
+      height: 100%;
+      width: 2em;
+      display: block;
+      position: absolute;
+      top: 0;
+      z-index: -1;
+    }
+    &::before {
+      left: 0;
+      transform: translateX(-1.95em);
+      background: linear-gradient(to left, $page-color, transparent);
+    }
+    &::after {
+      right: 0;
+      background: linear-gradient(to right, $page-color, transparent);
+      transform: translateX(1.95em);
     }
   }
-  section:target, #home:not(:target ~ main) {
-    display: block;
-    flex-grow: 1;
-    grid-column: main;
-  }
+}
+section:target, #home:not(:target ~ main) {
+  display: block;
+  grid-column: main;
 }
 footer {
   background-color: $footer-color;
