--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -6,6 +6,19 @@
   grid-template-columns: 1fr auto 1fr;
   grid-template-areas: "left main right";
 }
+.tabs_bg {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, transparent 0%, transparent 45%, $bg-color 45%, $bg-color 55%, transparent 60%, transparent 100%),
+              linear-gradient(to right, transparent 0%, transparent 45%, $bg-color 45%, $bg-color 55%, transparent 60%, transparent 100%);
+  background-size: 1em 1em;
+  filter: contrast(0.5);
+  z-index: -1;
+  pointer-events: none;
+}
 .tab {
   display: none;
   background-color: $page-color;
