--- a/src/index.pug
+++ b/src/index.pug
@@ -12,6 +12,7 @@ html(lang='en')
             img(src='images/title.png' alt='Matrix icon' width='100' height='100')
             h1 Matrix Math
     .tabs
+        .tabs_bg
         div: nav
             input#nav-toggle(type='checkbox')
             label(for='nav-toggle')
