--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -27,7 +27,6 @@
     background: linear-gradient(to $direction, $page-color, rgba($page-color, 0.9) 30%, rgba($page-color, 0.1) 70%, transparent);
   }
   @include breakpoint(desktop) {
-    max-width: min($mobile-width, 100vw - 20em);
     &::before, &::after {
       content: "";
       height: 100%;
@@ -52,4 +51,5 @@
 section.tab:target, #home.tab:not(:target ~ main) {
   display: block;
   grid-column: main;
+  width: min($mobile-width, 100vw - 20em); /* stop growing past mobile width but give room for nav */
 }
