--- a/src/index.pug
+++ b/src/index.pug
@@ -19,14 +19,19 @@ html(lang='en')
                 span(hidden) Menu &emsp14;
                 img(src='images/icon-dropdown.svg' alt='Expand menu toggle icon desktop' height='50')
             ul#dropdown
-                li: a(href='#home') Introduction
+                li: a(href='#tab1') Introduction
                 li: a(href='#tab2') Determinant Calculation
                 li: a(href='#tab3') Coming soon!
         - if(!lorem_ipsum) lorem_ipsum = null
         - lorem = () => lorem_ipsum({count: 5, units: 'paragraphs', format: 'html'});
-        section#tab1.tab  !{lorem()}
-        section#tab2.tab !{lorem()}
-        main#home.tab !{lorem()}
+        main#tab1.tab
+            include _home.pug
+        section#tab2.tab
+            include _determinant.pug
+        section#tab3.tab
+            h2 Coming soon!
+            p.
+                This section is still under construction. Please check back later.
     footer
             <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
             <a href="https://www.flaticon.com/free-icons/three-dots" title="three dots icons">Three dots icons created by alfanz - Flaticon</a>
