--- a/src/style.scss
+++ b/src/style.scss
@@ -19,7 +19,7 @@ html {
   }
 }
 body, header, footer, .tabs {
-  overflow: auto; // stop margin escape on small screens
+  overflow: auto; /* stop margin escape on small screens */
 }
 body {
   min-height: 100%;
