--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -6,7 +6,8 @@
   grid-template-columns: 1fr auto 1fr;
   grid-template-areas: "left main right";
 }
-.tabs_bg {
+.tabs::before {
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
@@ -38,12 +39,12 @@
     }
     &::before {
       left: 0;
-      transform: translateX(-95%);
+      transform: translateX(-90%);
       @include gradient(left);
     }
     &::after {
       right: 0;
-      transform: translateX(95%);
+      transform: translateX(90%);
         @include gradient(right);
     }
   }
