Split tabs style into navigation and look

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
 @import '_globals';
 @import '_breakpoint';
 @import '_dropdown';
-@import '_tabs';
+@import '_tabs_navigation';
+@import "_tabs_look";
 @import '_header';
 @import '_footer';
 * {
