--- a/src/index.pug
+++ b/src/index.pug
@@ -33,4 +33,4 @@ html(lang='en')
                 This section is still under construction. Please check back later.
     footer
             <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
-            <a href="https://www.flaticon.com/free-icons/three-dots" title="three dots icons">Three dots icons created by alfanz - Flaticon</a>
+            <a href="https://www.veryicon.com/icons/commerce-shopping/evaluation-interface-of-sanfu-official-mall/icon-dropdown.html" title="three dots icons">Dropdown icon by zuozuo6351751928</a>
