--- a/src/_footer.scss
+++ b/src/_footer.scss
@@ -16,7 +16,7 @@ footer {
   }
   @media not all and (max-width: 80ch) {
     a:not(:first-child)::before {
-        content: "\a0\a0";
+        content: "\a0\a0\a0\a0";
     }
   }
 }
