--- a/src/_home.pug
+++ b/src/_home.pug
@@ -5,7 +5,14 @@ p.
     A matrix is a rectangular array of elements, arranged in rows and columns. However, matrices are not just compact
     ways of storing data, as there are various mathematical operations that can be performed on them but not on
     plain numbers.
+p.
+    In this section, we will learn how to perform basic operations on matrices: addition, subtraction,
+    multiplication. We will also learn how to calculate the determinant of a matrix, which is a very
+    useful operation in many cases, as well as elementary row/column operations.
+
 hr
+
+h5 Addition and scalar multiplication
 p.
     The standard arithmetic operations of addition, subtraction, multiplication and division do not completely
     apply to matrices. Addition and multiplication by a scalar (a normal number) are simple:
@@ -33,8 +40,12 @@ div.expr
         tr #[td 2] #[td 2]
         tr #[td 3] #[td 5]
     span.comment Addition works as expected...
+p What about subtraction? Well, it's just addition with a negative number, so it's easy too. #[span.expr A - B = A + (-1 * B)].
+
 hr
-p But multiplication is weird:
+
+h5 Matrix multiplication
+p Multiplication is weird:
 div.expr
     table.matrix
         tr #[td 1] #[td 2]
@@ -69,14 +80,23 @@ p.
     We can see this operation is much more complicated than on the real numbers. It is not even defined for most
     pairs of matrices because we need the sizes to match, and in general it's not commutative. However, it is
     associative, which means that #[span.expr A * (B * C) = (A * B) * C].
+
 hr
+
+h5 ... and division?
 p.
-    What about subtraction and division? Subtraction is defined as #[span.expr A - B = A + (-B)], so it's easy - just subtract the corresponding elements.
-    There doesn't exist a direct definition of division, but we can define it in terms of multiplication.
-    To divide, we multiply by the inverse of the divisor (just like how #[span.expr x / y = x * 1 / y]). But matrices aren't always invertible.
-    In fact, they are only invertible if they are square and have a determinant that is not 0.
+    There is no 'direct' way to divide matrices. It is defined via multiplication by the inverse
+    (just like how #[span.expr x / y = x * (1 / y)]), but that is not always possible.
+    Unlike numbers, non-zero matrices are not always invertible.
+    In fact, they are only invertible if they are square and have a 'determinant' that is not 0. We will see how to find the inverse later.
+    It involves dividing by the determinant, which is why we need it to be non-zero. In a sense, matrices with a determinant of 0
+    (also called singular matrices) lose information when multiplying with other matrices, so there is no way to reverse multiplying by them.
+
+hr
+
+h5 Finding the determinant
 p.
-    What is a determinant? Well, calculating the determinant is one of the common operations on matrices. There
+    What is the determinant? Well, calculating the determinant is one of the common operations on matrices. There
     isn't really a good way to explain it in terms of normal numbers, so let's just see how it works on matrices.
 div.expr
     span det(
@@ -100,9 +120,10 @@ p.
     This is how we do it:
 ol
     li Pick a row or a column. Ones with zeroes are easier to calculate, but it always gives the same result.
+    li Start iterating over the elements in that row or column. For each element:
     li.
-        Find the determinant of the matrix obtained by removing that row and column. On paper, you can just imagine crossing out the
-        row and column. If only one element is non-zero you can literally do that, the others won't matter. We will see why in the next step.
+        Find the determinant of the matrix obtained by removing the row and column of the element. On paper, you can just imagine crossing out the
+        row and column centered on your element. If only one element is non-zero you can literally do that, the others won't matter. We will see why in the next step.
     li.
         Multiply each determinant by the element and it's "sign". If the element is 0 don't bother calculating the determinant.
         The "sign" is 1 if the sum of the coordinates is even, else it's -1. It works like a chessboard where the top-left corner of the matrix has sign 1.
@@ -110,3 +131,118 @@ ol
 p.
     Do the calculation yourself to check that it works!
     For our matrix the result will be #[span.expr.spoiler(tabindex=0) 1 * (5 * 9 - 6 * 8) - 2 * (4 * 9 - 6 * 7) + 3 * (4 * 8 - 5 * 7) = 0].
+    So, our matrix is #[span.spoiler(tabindex=0) #[em not] invertible].
+p.
+    In this case we didn't have too many calculations to do, but for larger matrices it can get quite complicated.
+    In a 4x4 matrix, you'd have to calculate 4 determinants of 3x3 matrices, and each of those would have 3 determinants of 2x2 matrices.
+    The calculations increase exponentially, but determinants larger than 4x4 are almost always calculated using a computer, via efficient algorithms.
+    This is also why getting zeroes is important - you avoid sub-determinants.
+
+hr
+
+h5 Elementary row/column operations
+p.
+    We can do some operations on matrices that don't change their determinant. These operations are called
+    "elementary row/column operations". They are very useful for dealing with matrices, and we will use them a lot.
+    They are:
+ul
+    li Swap two rows/columns.
+    li Multiply a row/column by a non-zero number.
+    li Add a multiple of one row/column to another.
+p.
+    Let's use them to find the determinant of our 3x3 matrix in another way.
+div.expr
+    span det(
+    table.matrix
+        tr #[td 1] #[td 2] #[td 3]
+        tr #[td 4] #[td 5] #[td 6]
+        tr #[td 7] #[td 8] #[td 9]
+    span ) = det (
+    table.matrix
+        tr #[td 1] #[td 2] #[td 3]
+        tr #[td 0] #[td -3] #[td -6]
+        tr #[td 0] #[td -6] #[td -12]
+    span ) = det (
+    table.matrix
+        tr #[td -3] #[td -6]
+        tr #[td -6] #[td -12]
+    span ) =
+    span -3 * -12 - -6 * -6 =
+    span 36 - 36 = 0
+    span.comment This is often easier than the general algorithm.
+p.
+    Notice how after the operations we got two rows that are just multiples of each other. When you see this,
+    you can immediately say the determinant is 0, because you could obtain a zero row by multiplying the other
+    row by a scalar and adding it to the first row. The same goes for columns.
+p.
+    In fact, it is always true that if the determinant is zero, you can obtain a zero row/column by elementary row/column operations.
+    We say this means that the row/column is #[em linearly dependent] on the other rows/columns. Similarly,
+    if the determinant is not zero, the rows/columns are #[em linearly independent]. This is a very important concept
+    in linear equations and vector spaces, but we won't go into that here.
+
+hr
+
+p   Be sure to check the next pages for the inverse of matrices! For now, here's some exercises.
+
+hr
+
+div.col
+    div.expr
+        table.matrix
+            tr #[td 1] #[td 2] #[td 3]
+            tr #[td 4] #[td 5] #[td 6]
+            tr #[td 7] #[td 8] #[td 9]
+        span *
+        table.matrix
+            tr #[td 0] #[td 1] #[td 0]
+            tr #[td 0] #[td 0] #[td 1]
+            tr #[td 1] #[td 0] #[td 0]
+    div.expr
+        table.matrix
+            tr #[td 9] #[td 8] #[td 7] #[td 6] #[td 5]
+            tr #[td 4] #[td 3] #[td 2] #[td 1] #[td 0]
+        span *
+        table.matrix
+            tr #[td 1]
+            tr #[td 2]
+            tr #[td 3]
+            tr #[td 4]
+            tr #[td 5]
+    div.expr
+        table.matrix
+            tr #[td -10] #[td 10]
+            tr #[td 0] #[td -10]
+        span *
+        table.matrix
+            tr #[td 1] #[td 2]
+            tr #[td 3] #[td 4]
+    div.expr
+        table.matrix
+            tr #[td 1] #[td 2] #[td 3]
+            tr #[td 4] #[td 5] #[td 6]
+            tr #[td 7] #[td 8] #[td 9]
+        span *
+        table.matrix
+            tr #[td 1] #[td 2] #[td 3]
+            tr #[td 4] #[td 5] #[td 6]
+            tr #[td 7] #[td 8] #[td 9]
+    div.expr
+        table.matrix
+            tr #[td 1] #[td 2] #[td 3]
+            tr #[td 4] #[td 5] #[td 6]
+            tr #[td 7] #[td 8] #[td 9]
+        span *
+        table.matrix
+            tr #[td 0] #[td 0] #[td 1]
+            tr #[td 0] #[td 1] #[td 0]
+            tr #[td 1] #[td 0] #[td 0]
+    div.expr
+        table.matrix
+            tr #[td 1] #[td -1] #[td 1]
+            tr #[td -1] #[td 1] #[td -1]
+            tr #[td 1] #[td -1] #[td 1]
+        span *
+        table.matrix
+            tr #[td -1] #[td 1] #[td -1]
+            tr #[td 1] #[td -1] #[td 1]
+            tr #[td -1] #[td 1] #[td -1]
