--- a/src/index.pug
+++ b/src/index.pug
@@ -18,19 +18,19 @@ html(lang='en')
                     span(hidden) Menu &emsp14;
                     img(src='images/icon-dropdown.svg' alt='Expand menu toggle icon desktop' height='50')
                 ul#dropdown
-                    li: a(href='#tab1') Introduction
-                    li: a(href='#tab2') Determinant Calculation
+                    li: a(href='#tab1') Basic Operations
+                    li: a(href='#tab2') Inverse
                     li: a(href='#tab3') Coming soon!
             - if(!lorem_ipsum) lorem_ipsum = null
             - lorem = () => lorem_ipsum({count: 5, units: 'paragraphs', format: 'html'});
-            main#tab1.tab
-                include _home.pug
             section#tab2.tab
                 include _determinant.pug
             section#tab3.tab
                 h2 Coming soon!
                 p.
                     This section is still under construction. Please check back later.
+            main#tab1.tab
+                include _home.pug
         footer
                 <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
                 <a href="https://www.veryicon.com/icons/commerce-shopping/evaluation-interface-of-sanfu-official-mall/icon-dropdown.html" title="three dots icons">Dropdown icon by zuozuo6351751928</a>
