--- a/src/index.pug
+++ b/src/index.pug
@@ -24,13 +24,13 @@ html(lang='en')
             - if(!lorem_ipsum) lorem_ipsum = null
             - lorem = () => lorem_ipsum({count: 5, units: 'paragraphs', format: 'html'});
             section#tab2.tab
-                include _determinant.pug
+                include _tab2.pug
             section#tab3.tab
                 h2 Coming soon!
                 p.
                     This section is still under construction. Please check back later.
             main#tab1.tab
-                include _home.pug
+                include _tab1.pug
         footer
                 <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
                 <a href="https://www.veryicon.com/icons/commerce-shopping/evaluation-interface-of-sanfu-official-mall/icon-dropdown.html" title="three dots icons">Dropdown icon by zuozuo6351751928</a>
