--- a/src/_tabs_look.scss
+++ b/src/_tabs_look.scss
@@ -99,3 +99,11 @@ table.matrix {
   column-span: all;
   break-inside: revert;
 }
+table.minuses {
+  td {
+    background-color: green;
+  }
+  tr:nth-child(odd) td:nth-child(even), tr:nth-child(even) td:nth-child(odd) {
+    background-color: red;
+  }
+}
