--- a/src/_tabs_look.scss
+++ b/src/_tabs_look.scss
@@ -54,13 +54,6 @@ div.expr {
     margin: 0 0.25em;
   }
 }
-table.matrix {
-  display: inline;
-  * {
-    border: none;
-  }
-  text-align: center;
-}
 .spoiler {
   display: inline;
   margin: 0;
@@ -99,7 +92,17 @@ table.matrix {
   column-span: all;
   break-inside: revert;
 }
-table.minuses {
+table.matrix {
+  display: inline;
+  * {
+    border: none;
+  }
+  text-align: center;
+  td {
+    border: gray dotted 1px;
+  }
+}
+.checkerboard {
   td {
     background-color: green;
   }
