--- a/src/_tabs_navigation.scss
+++ b/src/_tabs_navigation.scss
@@ -10,6 +10,20 @@
   }
   grid-template-areas: "left main right";
 }
+@keyframes grid_animation {
+  0% {
+    filter: contrast(0.5);
+    opacity: 0.5;
+  }
+  50% {
+    filter: contrast(0.5) hue-rotate(-70deg);
+    opacity: 0.8;
+  }
+  100% {
+    filter: contrast(0.5);
+    opacity: 0.5;
+  }
+}
 .tabs::before {
   content: "";
   position: absolute;
@@ -17,6 +31,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  animation: grid_animation 5s infinite ease-in-out;
   background: linear-gradient(to bottom, transparent 0%, transparent 45%, $bg-color 45%, $bg-color 55%, transparent 60%, transparent 100%),
               linear-gradient(to right, transparent 0%, transparent 45%, $bg-color 45%, $bg-color 55%, transparent 60%, transparent 100%);
   background-size: 1em 1em;
