--- a/src/index.pug
+++ b/src/index.pug
@@ -28,5 +28,8 @@ html(lang='en')
             main#tab1.tab
                 include _tab1.pug
         footer
+            p Proiect Tehnici Web
+            p Negrescu Theodor, Grupa 151, FMI
+            .credits
                 <a href="https://www.flaticon.com/free-icons/matrix" title="matrix icons">Matrix icons created by Freepik - Flaticon</a>
                 <a href="https://www.veryicon.com/icons/commerce-shopping/evaluation-interface-of-sanfu-official-mall/icon-dropdown.html" title="three dots icons">Dropdown icon by zuozuo6351751928</a>
