--- a/src/index.pug
+++ b/src/index.pug
@@ -4,7 +4,7 @@ html(lang='en')
         meta(charset='utf-8')
         meta(name='viewport' content='width=device-width, initial-scale=1')
         meta(name='description' content='An educational website about matrices.')
-        link(rel='icon' href='favicon.svg')
+        link(rel='icon' href='favicon.png')
         link(rel='stylesheet' href='style.css')
         title Matrices
     body
