Some matrices utility functions

--- a/src/_tab3.pug
+++ b/src/_tab3.pug
@@ -9,6 +9,7 @@ p.
     (some browsers may not support PWA installation).
 hr
 div.col
+    h1 Choose an exercise
     div.expr
         table.matrix
             tr #[td 1] #[td 2] #[td 3]
@@ -71,5 +72,3 @@ div.col
 hr
 p.
     If you can do these exercises by hand without a calculator, you shouldn't have any trouble with matrix multiplication.
-p.
-    Coming soon: auto-generated exercises with solution checking!
