--- a/src/index.pug
+++ b/src/index.pug
@@ -6,6 +6,8 @@ html(lang='en')
         meta(name='description' content='An educational website about matrices.')
         link(rel='icon' href='images/title.png')
         link(rel='stylesheet' href='style.css')
+        script(src='scripts/matrices.js' type='module')
+        script(src='scripts/main.js' type='module')
         title Matrices
     body
         header
